added basic element

--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "underscore": "~1.5.2",
     "bootstrap": "~3.0.1",
     "toastr": "~2.0.1",
-    "polymer": "~0.3.3"
+    "polymer": "~0.3.3",
+    "polymer-platform": "~0.3.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
