--- a/bower.json
+++ b/bower.json
@@ -11,8 +11,7 @@
     "bootstrap": "~3.0.1",
     "toastr": "~2.0.1",
     "polymer": "~0.3.3",
-    "polymer-platform": "~0.3.4",
-    "angular-ui-utils": "~0.1.1"
+    "polymer-platform": "~0.3.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
